--- a/C2_Data_Wrangling.ipynb
+++ b/C2_Data_Wrangling.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -752,6 +752,7 @@
     }
    ],
    "source": [
+    "# Show entries per state\n",
     "plt.figure(figsize=(13, 10))\n",
     "college_data.state.value_counts().plot(kind='barh')\n",
     "plt.title('Entries per State')\n",
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -842,14 +843,14 @@
     }
    ],
    "source": [
-    "\n",
+    "# tuition average per state\n",
     "college_data_state = college_data.groupby('state')[['in_state_tuition', 'out_of_state_tuition']].mean()\n",
     "college_data_state.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -864,6 +865,7 @@
     }
    ],
    "source": [
+    "# graph tuition average per state\n",
     "(college_data_state.reindex(index=college_data_state.mean(axis=1)\n",
     "    .sort_values(ascending=False)\n",
     "    .index)\n",
