--- a/C2_EDA.ipynb
+++ b/C2_EDA.ipynb
@@ -742,7 +742,7 @@
     "'Apps', 'Accept', 'Enroll', 'F.Undergrad', 'P.Undergrad', 'Books', and 'degree_length' are not significant features\n",
     "We can remove those rows below.\n",
     "\n",
-    "These are all fairly suprising that there isn't as much correlation."
+    "These are all fairly surprising that there isn't as much correlation."
    ]
   },
   {
