--- a/C2_Modeling.ipynb
+++ b/C2_Modeling.ipynb
@@ -166,10 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into train and test splits\n",
     "X_train, X_test, y_train, y_test = train_test_split(college_data.drop(columns='out_of_state_tuition'), \n",
     "                                                    college_data.out_of_state_tuition,\n",
     "                                                    test_size=0.3,\n",
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +194,7 @@
     }
    ],
    "source": [
+    "# Drop but save name column\n",
     "names_train = X_train['name']\n",
     "names_test = X_test['name']\n",
     "X_train.drop(columns='name', inplace=True)\n",
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,12 +229,13 @@
     }
    ],
    "source": [
+    "# Ensure modelable dtypes\n",
     "X_train.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -259,6 +262,7 @@
     }
    ],
    "source": [
+    "# make sure no missing values\n",
     "college_data.isna().sum()"
    ]
   },
@@ -271,10 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression pipeline\n",
     "lr_pipe = make_pipeline(\n",
     "    StandardScaler(),\n",
     "    SelectKBest(f_regression),\n",
@@ -284,20 +289,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# different number of features to test\n",
     "k = np.arange(1, len(X_train.columns)+1)\n",
     "param_grid = {'selectkbest__k': k}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# grid search for hyperparameters\n",
     "lr_grid_cv = GridSearchCV(lr_pipe, param_grid=param_grid, cv=5, n_jobs=-1)"
    ]
   },
@@ -788,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,6 +810,7 @@
     }
    ],
    "source": [
+    "# Display performance at different number of features (k)\n",
     "best_k = lr_grid_cv.best_params_['selectkbest__k']\n",
     "plt.subplots(figsize=(10, 5))\n",
     "plt.errorbar(k, score_mean, yerr=score_std)\n",
@@ -814,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,6 +847,7 @@
     }
    ],
    "source": [
+    "# find best hyperparameter model\n",
     "selected = lr_grid_cv.best_estimator_.named_steps.selectkbest.get_support()\n",
     "coefs = lr_grid_cv.best_estimator_.named_steps.linearregression.coef_\n",
     "features = X_train.columns[selected]\n",
@@ -854,10 +863,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Random forest pipeline\n",
     "rf_pipe = make_pipeline(\n",
     "    SelectKBest(f_regression),\n",
     "    RandomForestRegressor(random_state=47)\n",
@@ -866,10 +876,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# different hyperparamters to test\n",
     "param_grid = {\n",
     "    'selectkbest__k': k,\n",
     "    'randomforestregressor__n_estimators': [10, 25, 50, 100, 200, 500],\n",
@@ -881,10 +892,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# grid search for hyperparameters\n",
     "rf_grid_cv = GridSearchCV(rf_pipe, param_grid=param_grid, cv=5, n_jobs=-1)"
    ]
   },
@@ -1436,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1451,6 +1463,7 @@
     }
    ],
    "source": [
+    "# see what features the Random Forest model deems most important\n",
     "plt.subplots(figsize=(10, 5))\n",
     "imps = rf_grid_cv.best_estimator_.named_steps.randomforestregressor.feature_importances_\n",
     "rf_feat_imps = pd.Series(imps, index=X_train.columns).sort_values(ascending=False)\n",
@@ -1469,17 +1482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cross validation scoring of linear regression model\n",
     "lr_neg_mae = cross_validate(lr_grid_cv.best_estimator_, X_train, y_train, \n",
     "                            scoring='neg_mean_absolute_error', cv=5, n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1494,6 +1508,7 @@
     }
    ],
    "source": [
+    "# mean and std of scores\n",
     "lr_mae_mean = np.mean(-1 * lr_neg_mae['test_score'])\n",
     "lr_mae_std = np.std(-1 * lr_neg_mae['test_score'])\n",
     "lr_mae_mean, lr_mae_std"
@@ -1501,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1516,22 +1531,24 @@
     }
    ],
    "source": [
+    "# test model on test data\n",
     "mean_absolute_error(y_test, lr_grid_cv.best_estimator_.predict(X_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cross validation scoring of random forest model\n",
     "rf_neg_mae = cross_validate(rf_grid_cv.best_estimator_, X_train, y_train, \n",
     "                            scoring='neg_mean_absolute_error', cv=5, n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1546,6 +1563,7 @@
     }
    ],
    "source": [
+    "# mean and std of scores\n",
     "rf_mae_mean = np.mean(-1 * rf_neg_mae['test_score'])\n",
     "rf_mae_std = np.std(-1 * rf_neg_mae['test_score'])\n",
     "rf_mae_mean, rf_mae_std"
@@ -1553,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1568,6 +1586,7 @@
     }
    ],
    "source": [
+    "# test model on test data\n",
     "mean_absolute_error(y_test, rf_grid_cv.best_estimator_.predict(X_test))"
    ]
   },
@@ -1587,10 +1606,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Different fractions of splits tested\n",
     "fractions = [.2, .25, .3, .35, .4, .45, .5, .6, .75, .8, 1.0]\n",
     "train_size, train_scores, test_scores = learning_curve(lr_pipe, X_train, y_train, train_sizes=fractions)\n",
     "test_scores_mean = np.mean(test_scores, axis=1)\n",
@@ -1599,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1614,6 +1634,7 @@
     }
    ],
    "source": [
+    "# scores at different train/test splits\n",
     "plt.subplots(figsize=(10, 5))\n",
     "plt.errorbar(train_size, test_scores_mean, yerr=test_scores_std)\n",
     "plt.xlabel('Training set size')\n",
@@ -1670,17 +1691,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What does our best model predict Purdue's tuition to be\n",
     "X_purdue = purdue.drop(columns=['name','out_of_state_tuition'])\n",
     "purdue_pred = best_model.predict(X_purdue).item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,10 +1738,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compare function to compare Purdue's features to overall distributions\n",
     "def plot_compare(feat_name, description):\n",
     "    plt.subplots(figsize=(10,5))\n",
     "    college_x = college_data[feat_name]\n",
@@ -1914,7 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test an increase in expedenture of -1000 to 12000."
+    "Test an increase in expedenture of -1000 to 8000."
    ]
   },
   {
