--- a/notebooks/C2_EDA.ipynb
+++ b/notebooks/C2_EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-10-07T07:04:19.124917Z",
@@ -29,7 +29,7 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import scale\n",
     "\n",
-    "from raw_data.sb_utils import save_file"
+    "from lib.sb_utils import save_file"
    ]
   },
   {
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "college_data = pd.read_csv('./data/college_data_cleaned.csv')"
+    "college_data = pd.read_csv('../data/college_data_cleaned.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "4               42135.0  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "[349 rows x 2 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "4               42135.0    33971.31  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
        "max            56876.000000  50074.000000  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "4     0.501608 -0.593998   0.171501    0.097874  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "4 -0.151448  0.830586"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1724,7 @@
        "9     0.020914 -0.295764   0.025339   -0.015475  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
        "4    33971.31  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,25 +1894,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A file already exists with this name.\n",
-      "\n",
-      "\n",
-      "Please re-run this cell with a new filename.\n"
+      "Writing file.  \"../data/college_data_EDA.csv\"\n"
      ]
     }
    ],
    "source": [
     "# Save the data \n",
-    "\n",
-    "datapath = './data'\n",
-    "save_file(college_data, 'college_data_EDA.csv', datapath)"
+    "save_file(college_data, 'college_data_EDA.csv', '../data')"
    ]
   }
  ],
