--- a/notebooks/Data_Wrangling.ipynb
+++ b/notebooks/Data_Wrangling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read data from the 2 datasets\n",
     "college_data1 = pd.read_csv('../raw_data/College_Data.csv')\n",
     "college_data2 = pd.read_csv('../raw_data/tuition_cost.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -78,12 +79,13 @@
        "(777, 16)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Small adjustments and looking at first dataset\n",
     "college_data1.rename(columns={college_data1.columns[0]:\"name\"}, inplace=True)\n",
     "college_data1.drop([\"Outstate\", \"Personal\", \"Terminal\"], axis=1, inplace=True)\n",
     "print(college_data1.head())\n",
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,12 +122,13 @@
        "(2973, 5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Small adjustments and looking at second dataset\n",
     "college_data2 = college_data2[[\"name\",\"state\",\"degree_length\",\"in_state_tuition\", \"out_of_state_tuition\"]]\n",
     "print(college_data2.head())\n",
     "college_data2.shape"
@@ -140,11 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Change college_data2 to have matching names with college_data1\n",
+    "# Change college_data2 to have matching names with college_data1\n",
+    "# This function counts similarities if it is \"close enough\"\n",
     "def match_names(name, choices):\n",
     "    match, score = process.extractOne(name, choices)\n",
     "    return match if score >= 80 else None\n",
@@ -152,7 +156,7 @@
     "left_names = college_data1[\"name\"].tolist()\n",
     "college_data2[\"name\"] = college_data2[\"name\"].apply(lambda x: match_names(x, left_names))\n",
     "\n",
-    "#Get rid of dup keys\n",
+    "# Get rid of dup keys\n",
     "dup_keys = college_data2.loc[college_data2.duplicated(subset=[\"name\"], keep=False), \"name\"].unique()\n",
     "college_data1 = college_data1[~college_data1[\"name\"].isin(dup_keys)]\n",
     "college_data1.reset_index(drop=True, inplace=True)\n"
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,12 +206,13 @@
        "(349, 20)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Merge the datasets\n",
     "college_data = college_data1.merge(college_data2, how=\"left\", on=\"name\")\n",
     "college_data.dropna(inplace=True)\n",
     "college_data.reset_index(drop=True, inplace=True)\n",
@@ -217,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,13 +379,13 @@
        "out_of_state_tuition      0  0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#missing values count\n",
+    "# Check missing values count\n",
     "missing = pd.concat([college_data.isnull().sum(), 100 * college_data.isnull().mean()], axis=1)\n",
     "missing.columns=['count', '%']\n",
     "missing.sort_values(by='count')"
@@ -388,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -524,13 +529,13 @@
        "out_of_state_tuition                              28794.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#College of interest\n",
+    "# College of interest\n",
     "college_data[college_data.name == 'Purdue University at West Lafayette'].T\n"
    ]
   },
@@ -543,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -673,19 +678,19 @@
        "[349 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Change object features\n",
+    "# Change object features\n",
     "college_data.select_dtypes('object')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -714,13 +719,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Change dtypes\n",
+    "# Change dtypes\n",
     "college_data[\"Private\"] = college_data[\"Private\"].map({\"Yes\": 1, \"No\": 0})\n",
     "college_data[\"degree_length\"] = college_data[\"degree_length\"].apply(str).str.extract(r\"(\\d+)\").astype(int)\n",
     "college_data[\"state\"] = college_data[\"state\"].astype(str)\n",
@@ -730,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -837,20 +842,20 @@
        "Colorado        24765.333333          32213.333333"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# tuition average per state\n",
+    "# Tuition average per state\n",
     "college_data_state = college_data.groupby('state')[['in_state_tuition', 'out_of_state_tuition']].mean()\n",
     "college_data_state.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +870,7 @@
     }
    ],
    "source": [
-    "# graph tuition average per state\n",
+    "# Graph tuition average per state\n",
     "(college_data_state.reindex(index=college_data_state.mean(axis=1)\n",
     "    .sort_values(ascending=False)\n",
     "    .index)\n",
@@ -875,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1154,18 +1159,19 @@
        "out_of_state_tuition  32730.0  43450.0  56876.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Look at statistics of each feature\n",
     "college_data.describe().T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1180,6 +1186,7 @@
     }
    ],
    "source": [
+    "# Feature distributions\n",
     "college_data.hist(figsize=(15,10))\n",
     "plt.subplots_adjust(hspace=0.5);"
    ]
@@ -1193,16 +1200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Target feature set to 'out_of_state_tuition' only\n",
     "college_data.drop(columns='in_state_tuition', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1263,6 +1271,7 @@
     }
    ],
    "source": [
+    "# Save the data\n",
     "save_file(college_data, 'college_data_cleaned.csv', '../data')"
    ]
   }
