--- a/notebooks/Pre_Processing.ipynb
+++ b/notebooks/Pre_Processing.ipynb
@@ -65,6 +65,7 @@
     }
    ],
    "source": [
+    "# Load cleaned EDA data and look at features\n",
     "college_data = pd.read_csv('../data/college_data_EDA.csv')\n",
     "college_data.info()"
    ]
@@ -153,6 +154,7 @@
     }
    ],
    "source": [
+    "# Look at college of interest\n",
     "purdue = college_data[college_data.name.str.match('^Purdue')]\n",
     "college_data = college_data[~college_data.name.str.match('^Purdue')]\n",
     "purdue.head()"
@@ -171,6 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into train and test splits\n",
     "X_train, X_test, y_train, y_test = train_test_split(college_data.drop(columns='out_of_state_tuition'), \n",
     "                                                    college_data.out_of_state_tuition,\n",
     "                                                    test_size=0.3,\n",
@@ -194,6 +197,7 @@
     }
    ],
    "source": [
+    "# Drop but save name column\n",
     "names_train = X_train['name']\n",
     "names_test = X_test['name']\n",
     "X_train.drop(columns='name', inplace=True)\n",
@@ -228,6 +232,7 @@
     }
    ],
    "source": [
+    "# Ensure preprocessed datatypes\n",
     "X_train.dtypes"
    ]
   },
@@ -260,6 +265,7 @@
     }
    ],
    "source": [
+    "# Ensure preprocessed null values\n",
     "college_data.isna().sum()"
    ]
   },
@@ -294,6 +300,7 @@
     }
    ],
    "source": [
+    "# This is the naive mean model\n",
     "mean_mod = DummyRegressor(strategy='mean')\n",
     "mean_mod.fit(X_train, y_train)\n",
     "y_tr_pred = mean_mod.predict(X_train)\n",
@@ -318,6 +325,7 @@
     }
    ],
    "source": [
+    "# Naive model r2 score\n",
     "round(r2_score(y_test, y_te_pred), 6)"
    ]
   },
@@ -338,6 +346,7 @@
     }
    ],
    "source": [
+    "# Naive model MSE score\n",
     "round(mean_squared_error(y_test, y_te_pred), 2)"
    ]
   },
@@ -773,16 +782,16 @@
        "}\n",
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
        "                (&#x27;selectkbest&#x27;,\n",
-       "                 SelectKBest(score_func=&lt;function f_regression at 0x167ed5a80&gt;)),\n",
+       "                 SelectKBest(score_func=&lt;function f_regression at 0x149c85620&gt;)),\n",
        "                (&#x27;linearregression&#x27;, LinearRegression())])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>Pipeline</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
        "                (&#x27;selectkbest&#x27;,\n",
-       "                 SelectKBest(score_func=&lt;function f_regression at 0x167ed5a80&gt;)),\n",
-       "                (&#x27;linearregression&#x27;, LinearRegression())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>StandardScaler</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SelectKBest</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.feature_selection.SelectKBest.html\">?<span>Documentation for SelectKBest</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>SelectKBest(score_func=&lt;function f_regression at 0x167ed5a80&gt;)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LinearRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div></div></div>"
+       "                 SelectKBest(score_func=&lt;function f_regression at 0x149c85620&gt;)),\n",
+       "                (&#x27;linearregression&#x27;, LinearRegression())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>StandardScaler</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SelectKBest</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.feature_selection.SelectKBest.html\">?<span>Documentation for SelectKBest</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>SelectKBest(score_func=&lt;function f_regression at 0x149c85620&gt;)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LinearRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
        "                ('selectkbest',\n",
-       "                 SelectKBest(score_func=<function f_regression at 0x167ed5a80>)),\n",
+       "                 SelectKBest(score_func=<function f_regression at 0x149c85620>)),\n",
        "                ('linearregression', LinearRegression())])"
       ]
      },
@@ -792,6 +801,7 @@
     }
    ],
    "source": [
+    "# Linear Regression pipeline\n",
     "pipe = make_pipeline(\n",
     "    StandardScaler(),\n",
     "    SelectKBest(f_regression), #test different k in modeling\n",
@@ -806,6 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Predict\n",
     "y_tr_pred = pipe.predict(X_train)\n",
     "y_te_pred = pipe.predict(X_test)"
    ]
@@ -827,6 +838,7 @@
     }
    ],
    "source": [
+    "# r2 scores of training and testing data\n",
     "r2_score(y_train, y_tr_pred), r2_score(y_test, y_te_pred)"
    ]
   },
@@ -847,6 +859,7 @@
     }
    ],
    "source": [
+    "# MSE scores of training and testing data\n",
     "mean_squared_error(y_train, y_tr_pred), mean_squared_error(y_test, y_te_pred)"
    ]
   },
